fix(input): ngMessages jump with ngShow, ngIf, etc
When the ngMessages directive was used with the ngShow,
ngIf and other directives inside of an md-input-container,
the messages would flicker and jump rather than properly
animating.

Additionally, if the messages spanned multiple lines,
the animations were incorrect due to hard-coded values.

Fix many styles and move animations into JS so we can
properly calculate message heights.

Also, add more flexibility with the `md-auto-hide` CSS
class and associated attribute and update docs/demo
accordingly.

BREAKING CHANGE

By default, the `<md-input-container>` now automatically
hides any error messages until the component is in an
error state (determined by `md-is-error`). If you wish
to achieve the original behavior where messages are
always visible, add the `md-auto-hide="false"` attribute
to your `ng-messages` or use one of the following
visibility directives:

 - `ng-if`
 - `ng-show`/`ng-hide`
 - `ng-switch-when`/`ng-switch-default`

Fixes #5298.

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -14,8 +14,10 @@ $input-padding-top: 2px !default;
 
 $input-error-font-size: 12px !default;
 $input-error-height: 24px !default;
+$input-error-line-height: $input-error-font-size + 2px;
+$error-padding-top: ($input-error-height - $input-error-line-height) / 2;
 
-$icon-offset : 36px !default;
+$icon-offset: 36px !default;
 
 $icon-float-focused-top: -8px !default;
 
@@ -31,10 +33,19 @@ md-input-container {
     display: block;
   }
 
-  // When we have ng-messages, remove the input error height from our bottom padding, since the
-  // ng-messages wrapper has a min-height of 1 error (so we don't adjust height as often; see below)
-  &.md-input-has-messages {
-    padding-bottom: $input-container-padding;
+  // Setup a spacer that is always there as a placeholder for any messages so we don't change
+  // height with only 1 message
+  .md-errors-spacer {
+    float: right;
+    min-height: $input-error-height;
+
+    // Ensure the element always takes up space, even if empty
+    min-width: 1px;
+  }
+
+  // Move the element after the spacer (likely an ng-messages container), on top of the spacer
+  .md-errors-spacer + * {
+    margin-top: -$input-error-height;
   }
 
   > md-icon {
@@ -135,7 +146,7 @@ md-input-container {
   &:not( .md-input-has-value ) input:not( :focus )::-webkit-datetime-edit-week-field,
   &:not( .md-input-has-value ) input:not( :focus )::-webkit-datetime-edit-year-field,
   &:not( .md-input-has-value ) input:not( :focus )::-webkit-datetime-edit-text {
-      color: transparent;
+    color: transparent;
   }
 
   /*
@@ -181,34 +192,29 @@ md-input-container {
   }
 
   .md-char-counter {
-    position: absolute;
-    right: $input-container-padding;
-    bottom: 7px;
+    text-align: right;
+    padding-right: $input-container-padding;
   }
 
-  &.md-input-invalid {
-    ng-messages, data-ng-messages, x-ng-messages,
-    [ng-messages], [data-ng-messages], [x-ng-messages] {
-      opacity: 1;
-    }
-  }
-
+  //
+  // ngMessage base styles - animations moved to input.js
+  //
   ng-messages, data-ng-messages, x-ng-messages,
   [ng-messages], [data-ng-messages], [x-ng-messages] {
     position: relative;
     order: 4;
-    min-height: $input-error-height;
     overflow: hidden;
-    transition: $swift-ease-out;
-    transition-duration: $swift-ease-out-duration / 1.5;
-    opacity: 0;
+    min-height: $input-error-height;
     clear: left;
 
-    .md-char-counter {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: auto;
+    &.ng-enter {
+      // Upon entering the DOM, messages should be hidden
+      ng-message, data-ng-message, x-ng-message,
+      [ng-message], [data-ng-message], [x-ng-message],
+      [ng-message-exp], [data-ng-message-exp], [x-ng-message-exp] {
+        opacity: 0;
+        margin-top: -100px;
+      }
     }
   }
 
@@ -216,43 +222,40 @@ md-input-container {
   [ng-message], [data-ng-message], [x-ng-message],
   [ng-message-exp], [data-ng-message-exp], [x-ng-message-exp],
   .md-char-counter {
-    $input-error-line-height: $input-error-font-size + 2px;
-    //-webkit-font-smoothing: antialiased;
     font-size: $input-error-font-size;
     line-height: $input-error-line-height;
     overflow: hidden;
 
+    transition: $swift-ease-in;
+
+    // Default state for messages is to be visible
+    opacity: 1;
+    margin-top: 0;
+
     // Add some top padding which is equal to half the difference between the expected height
     // and the actual height
-    $error-padding-top: ($input-error-height - $input-error-line-height) / 2;
     padding-top: $error-padding-top;
 
+    // For everything except the character counter (i.e. all messages)
     &:not(.md-char-counter) {
+      // Add some right padding so that the messages don't overlap the character counter
       padding-right: rem(5);
     }
+  }
 
-    &.ng-enter {
-      transition: $swift-ease-in;
-
-      // Delay the enter transition so it happens after the leave
-      transition-delay: $swift-ease-in-duration / 1.5;
-
-      // Since we're delaying the transition, we speed up the duration a little bit to compensate
-      transition-duration: $swift-ease-in-duration / 1.5;
-      opacity: 0;
-      margin-top: -$input-error-line-height - $error-padding-top;
-      &.ng-enter-active {
-        opacity: 1;
-        margin-top: 0;
+  &:not(.md-input-invalid) {
+    .md-auto-hide {
+      .md-input-message-animation {
+        opacity: 0;
+        margin-top: -100px;
       }
     }
-    &.ng-leave {
-      transition: $swift-ease-out;
-      transition-duration: $swift-ease-out-duration / 1.5;
-      &.ng-leave-active {
-        margin-top: -$input-error-line-height - $error-padding-top;
-        opacity: 0;
-      }
+  }
+
+  .md-input-message-animation {
+    &.ng-enter, &:not(.ng-animate) {
+      opacity: 0;
+      margin-top: -100px;
     }
   }
 
@@ -260,7 +263,7 @@ md-input-container {
   &.md-input-has-placeholder,
   &.md-input-has-value {
     label:not(.md-no-float) {
-      transform: translate3d(0,$input-label-float-offset,0) scale($input-label-float-scale);
+      transform: translate3d(0, $input-label-float-offset, 0) scale($input-label-float-scale);
     }
   }
 
@@ -294,12 +297,11 @@ md-input-container {
 
 md-input-container.md-icon-float {
 
-  transition : margin-top 0.5s $swift-ease-out-timing-function ;
+  transition: margin-top 0.5s $swift-ease-out-timing-function;
 
-
-  > label  {
-      pointer-events:none;
-      position:absolute;
+  > label {
+    pointer-events: none;
+    position: absolute;
   }
 
   > md-icon {
@@ -311,9 +313,9 @@ md-input-container.md-icon-float {
   &.md-input-has-value {
 
     label {
-        transform: translate3d(0,$input-label-float-offset,0) scale($input-label-float-scale);
-        transition: transform $swift-ease-out-timing-function 0.5s;
-      }
+      transform: translate3d(0, $input-label-float-offset, 0) scale($input-label-float-scale);
+      transition: transform $swift-ease-out-timing-function 0.5s;
+    }
   }
 
 }
